--- a/.github/workflows/run-rust.yml
+++ b/.github/workflows/run-rust.yml
@@ -10,9 +10,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
-      - name: Check that code can compile
-        run: cargo check # Run the `cargo check` command
+    #   - name: Check that code can compile
+    #     run: cargo check # Run the `cargo check` command
       - name: Build the static site
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: cargo run --release --bin repo-scraper -- --output /page
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
