--- a/.github/workflows/run-rust.yml
+++ b/.github/workflows/run-rust.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Build the static site
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: cargo run --release --bin repo-scraper -- --output /page
+        run: cargo run --release --bin repo-scraper -- --output ./public
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: /page
+          publish_dir: ./public
