--- a/.github/workflows/run-rust.yml
+++ b/.github/workflows/run-rust.yml
@@ -9,17 +9,19 @@ jobs:
     runs-on: ubuntu-latest # OS on which the job runs
     steps: # Each job consists in a series of steps
       - name: Checkout # Clone git repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install stable toolchain
         uses: dtolnay/rust-toolchain@stable
-    #   - name: Check that code can compile
-    #     run: cargo check # Run the `cargo check` command
       - name: Build the static site
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: cargo run --release --bin repo-scraper -- --output ./public
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          path: './public' # Upload static site
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
