feat: :sparkles: Delete artifact after deployment

--- a/.github/workflows/run-rust.yml
+++ b/.github/workflows/run-rust.yml
@@ -26,7 +26,12 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
+          name: page-artifact
           path: './public' # Upload static site
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      - name: Delete artifact
+        uses: geekyeggo/delete-artifact@v5
+        with:
+          name: page-artifact
