fix: :bug: update permissions

--- a/.github/workflows/run-rust.yml
+++ b/.github/workflows/run-rust.yml
@@ -6,6 +6,7 @@ permissions:
   contents: read
   pages: write
   id-token: write
+  actions: write
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -27,7 +28,6 @@ jobs:
       - uses: prantlf/delete-cache-action@v2
         with:
           key: cache-bin-data
-          token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/cache/save@v4
         if: always()
         with:
