--- a/.github/workflows/run-rust.yml
+++ b/.github/workflows/run-rust.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build rust app and run # TODO: use published docker instead of building app
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: cargo run --release --bin repo-scraper -- --output ./public
+        run: cargo run --release --bin repo-scraper
       - uses: prantlf/delete-cache-action@v2
         with:
           key: cache-bin-data
