--- a/.github/workflows/run-rust.yml
+++ b/.github/workflows/run-rust.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: prantlf/delete-cache-action@v2
         with:
           key: cache-bin-data
+        continue-on-error: true
       - uses: actions/cache/save@v4
         if: always()
         with:
