--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ bincode = "=2.0.0-rc.3"
 flate2 = "1.0.30"
 regex = "1.10.5"
 set_field = "0.1.1"
+reqwest = { version = "0.12.5", features = ["blocking", "json"] }
+serde = { version = "1.0.203", features = ["derive"] }
+serde_yaml = "0.9.34"
