--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "repo-scraper"
+authors = ["LeHuman"]
 version = "0.1.0"
 edition = "2021"
-description = "GitHub repository scraper for presenting repositories on a personal website"
+description = "Repository scraper for presenting repositories on a personal website"
 repository = "https://github.com/LeHuman/repo-scraper"
 license = "MIT OR Apache-2.0"
 
@@ -13,16 +14,15 @@ octocrab = "0.39.0"
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0.117"
 chrono = "0.4.38"
-bincode = "=2.0.0-rc.3"
-flate2 = "1.0.30"
 regex = "1.10.5"
 set_field = "0.1.1"
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_yaml = "0.9.34"
 tracing = "0.1.40"
-localsavefile = "0.1.2"
-savefile = "0.17.6"
+localsavefile = "0.2.1"
+savefile = "0.17.7"
+secrecy = "0.8.0"
 
 [dev-dependencies]
 tracing-test = "0.2.5"
