--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "repo-scraper"
+name = "reposcrape"
 authors = ["LeHuman"]
 version = "0.1.0"
 edition = "2021"
@@ -20,9 +20,11 @@ reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_yaml = "0.9.34"
 tracing = "0.1.40"
-localsavefile = "0.2.1"
+localsavefile = { version = "0.2.2", path = "../localsavefile/localsavefile" }
 savefile = "0.17.7"
 secrecy = "0.8.0"
 
 [dev-dependencies]
+dotenvy = "0.15.7"
+tracing-subscriber = "0.3.18"
 tracing-test = "0.2.5"
