--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,11 @@ serde_json = "1.0.117"
 chrono = "0.4.38"
 regex = "1.10.5"
 set_field = "0.1.1"
-reqwest = { version = "0.12.5", features = ["blocking", "json"] }
+reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_yaml = "0.9.34"
 tracing = "0.1.40"
-localsavefile = { version = "0.2.2", path = "../localsavefile/localsavefile" }
+localsavefile = { version = "0.2.3", path = "../localsavefile/localsavefile" }
 savefile = "0.17.7"
 secrecy = "0.8.0"
 
