--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_yaml = "0.9.34"
 tracing = "0.1.40"
-localsavefile = { version = "0.2.3", path = "../localsavefile/localsavefile" }
+localsavefile = { version = "0.2.3" }
 savefile = "0.17.7"
 secrecy = "0.8.0"
 
